feat: fixed the editing error where users can edit username and email to usernames that exist, created an exists method in the UserRepository for both username and email, also added the unique constraints with the column anotations on top of the private varibales, error editing sends me to a response page because I was just verifiying if it worked

--- a/src/main/resources/templates/edit-profile.html
+++ b/src/main/resources/templates/edit-profile.html
@@ -7,6 +7,10 @@
 </head>
 <body>
     <form th:action="@{/edit}" method="post" th:object="${useredit}">
+        <ul>
+            <li th:if="${#fields.hasErrors('username')}" th:errors="*{username}"></li>
+            <li th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></li>
+        </ul>
         <input type="text" id="username" th:field="*{username}"><br>
         <input type="text" id="email" th:field="*{email}"><br>
         <input type="submit" value="submit">
